--- a/integration/docker-compose.yml
+++ b/integration/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.1'
 
 services:
   generator:
-    image: my-registry:55000/gen:ci-${GENERATOR_BUILD_NUMBER-10}
+    image: myimage
+    # my-registry:55000/gen:ci-${GENERATOR_BUILD_NUMBER-10}
     #ports:
     #  - "8080:80"
   mail:
@@ -10,7 +11,7 @@ services:
     #ports:
     #  - "8025:8025"
   integration:
-    image: my-registry:55000/gen:integration-${BUILD_NUMBER-10}
+    image: gen:integration-${BUILD_NUMBER-10}
     build: .
     environment:
       - TEAMCITY_PROJECT_NAME
