--- a/integration/docker-compose.yml
+++ b/integration/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     #  - "8080:80"
   mail:
     image: mailhog/mailhog
-    #ports:
-    - "8025:8025"
+    ports:
+      - "8025:8025"
   integration:
     image: gen:integration-${BUILD_NUMBER-10}
     build: .
